--- a/html/links.css
+++ b/html/links.css
@@ -4,7 +4,7 @@
   padding-bottom: 0.41em;
   position: relative;
   display: inline-block;
-  width: 7.08em;
+  min-width: 7.08em;
   border: 1px solid var(--color-2);
   vertical-align: top;
   margin-top: 0;
